refac: simplify user adm with isManagement